name:                digitalocean-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nryotaro/digitalocean-hs#readme
license:             MIT
license-file:        LICENSE
author:              Nakamura, Ryotaro
maintainer:          nakamura.ryotaro.kzs@gmail.com
copyright:           2017 Nakamura, Ryotaro
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5,
                       aeson,
                       text,
                       bytestring,
                       transformers ,
                       HTTP         ,
                       http-conduit,
                       http-types,
                       hspec
  default-language:    Haskell2010

executable digitalocean-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , digitalocean-hs
  default-language:    Haskell2010

test-suite digitalocean-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
--                       aeson        >= 0.6  && < 0.9,
--                       text         >= 0.10 && < 2,
--                       bytestring   >= 0.10 && < 0.11,
--                       transformers >= 0.3  && < 0.5,
--                       HTTP         >= 4000 && < 4001,
--                       http-conduit >= 2.1  && < 2.2,
--                       http-types   >= 0.8.6,
                       digitalocean-hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nryotaro/digitalocean-hs
